lots of updates applied from use in practice, new gulp htmlincluder

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,5 @@
-<!--#wrap file="_layout.html" -->
-  <!--#include virtual file="pages/index/-home-carousel.html" -->
+<!--#wrap path="layouts/_default.html" rawJson="{ title: 'page title' }" -->
+  <!--#insert path="pages/index/-home-carousel.html" -->
   <button class="toggle-lightbox">toggle</button>
-<!--#include virtual file="pages/index/-home-lightbox.html" -->
-<!--#endwrap file="_layout.html" -->
+  <!--#insert path="pages/index/-home-lightbox.html" -->
+<!--#endwrap -->
