--- a/src/html/global/-header.html
+++ b/src/html/global/-header.html
@@ -3,7 +3,7 @@
     <div class="fll">
       <img src="//placehold.it/200x50" alt="">
     </div>
-    <!--#include virtual file="-input-search.html" -->
+    <!--#insert path="-input-search.html" -->
     <nav class="flr">
       links links links links
     </nav>
