--- a/src/html/pages/index/-home-lightbox.html
+++ b/src/html/pages/index/-home-lightbox.html
@@ -1,6 +1,6 @@
 <div class="home-lightbox">
-  <!--#wrap file="../../blocks/_lightbox.html" -->
-  <!--#endwrap file="../../blocks/_lightbox.html" -->
+  <!--#wrap path="../../blocks/_lightbox.html" -->
+  <!--#endwrap -->
   <tempate class="home-lightbox__template dn">
     <div class="bgc-white p30">Test</div>
   </tempate>
